# kinesix_daemon

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  meson.build
data/: com.github.kicsyromy.kinesix.appdata.xml  com.github.kicsyromy.kinesix.desktop
src/: Application.vala  BackendDevice.vala  BackendInterface.vala  Makefile.am  configure.ac  kinesixd_daemon.c  kinesixd_daemon.h  kinesixd_dbus_adaptor.c  kinesixd_dbus_adaptor.h  kinesixd_device.h  kinesixd_device_marshaler.c  kinesixd_device_p.h  main.c  org.kicsyromy.kinesixd.xml
src/include/: kinesixd_daemon.h  kinesixd_device_marshaler.h
subprojects/libkinesix/: .gitignore  kinesixd_daemon.c  kinesixd_device.c  meson.build  org.kicsyromy.kinesixd.xml
subprojects/libkinesix/include/: kinesixd_daemon.h  kinesixd_global.h
test/: .gitignore  Makefile.am  configure.ac  main.c  test_kinesixd_device.h
